Add Japanese name

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-------------------------------------------Counterfeit Cherry Blossom--------------------------------------------
-											
+------------------Counterfeit Cherry Blossom--------------------
+		　　東方妖偽夢									
 Use Up, Down, Right, Left to control the white ball to dodge the balls launched by yuyuko!
 
 Press A to shoot
